@@ -1,0 +1,4 @@
+>assembly.1 895:1:37:17593:9954/1
+GCGAGTGGAGGCCGCAGACGCGAGTGGTGGAGGGAGAAGGCCTGACGGAGGCCGCAGACGCGAGTGGTGGAGGGAGAAGG
+CCTGACGGAGGCCGCAGACGCGAGTGGTGGAGGGAGAAGGCCTGACGGTTGACGGGGCTCAGGGGGCGGCTGACTCCGAG
+AGACAGCAGCCGCAGCTGTCGTCAGGGGATTTCCGGGGCGGAGGCCGCAGACGCGAGTGGTGGAGGGAGAAGGCCTGACG
