@@ -1,2 +1,2 @@
 >895:1:37:17593:9954/1
-GGAGGCCGCAGACGCGAGTGGTGGAGGGAGAAGGCCTGACGGAGGCCGCAGACGCGAGTGGTGGAGGGAGAAGGCCTGACGGAGGCCGCAGACGCGAGTGGTGGAGGGAGAAGGCCTGACGGAGGCCGCAGACGCGAGTGGTGGAGGGAGAAGGCCTGACGGTTGACGGGGCTCAGGGGGCGGCTGACTCCGAGAGACAGCAGCCGCAGCTGTCGTCAGGGGATTTCCGGGGCGGAGGCCGCAGACGCGAGTGGTGGAGGGAGAAGGCCTGACG
+GCGAGTGGAGGCCGCAGACGCGAGTGGTGGAGGGAGAAGGCCTGACGGAGGCCGCAGACGCGAGTGGTGGAGGGAGAAGGCCTGACGGAGGCCGCAGACGCGAGTGGTGGAGGGAGAAGGCCTGACGGTTGACGGGGCTCAGGGGGCGGCTGACTCCGAGAGACAGCAGCCGCAGCTGTCGTCAGGGGATTTCCGGGGCGGAGGCCGCAGACGCGAGTGGTGGAGGGAGAAGGCCTGACG
